updataes to new IMUHelper

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Arduino/~$DiceStateGenerators v2.xlsx
 Arduino/QuantumDice/build/esp32.esp32.esp32s3/QuantumDice.ino.bin
 Arduino/QuantumDice/build/esp32.esp32.esp32s3/QuantumDice. V1.0.1.bin
 *.bin
+Arduino/~$O08x Stability Classifier Configuration Guide.docx
