Updated .editorconfig to use lf as line endings for shell files

--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,11 @@ indent_style = space
 indent_size = 4
 tab_width = 4
 
+[*.sh]
+end_of_line = lf
+indent_style = tab
+tab_width = 4
+
 ; Settings for .clang-format and .clang-tidy
 [.clang-format, .clang-tidy]
 indent_size = 2
