--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -15,5 +15,4 @@ jobs:
 
       - name: Compile the project
         run: |
-          cd Arduino/QuantumDice
-          arduino-cli compile
+          arduino-cli compile "Arduino/QuantumDice"
