--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -35,5 +35,4 @@ jobs:
 
       - name: Run clang-tidy
         run: |
-          echo $(git ls-files | grep -E '\.(cc|cpp|cxx|ino)$' | grep -v -E 'build/|ImageLibrary/')
-          git ls-files | grep -E '\.(cc|cpp|cxx|ino)$' | grep -v -E 'build/|ImageLibrary/' | xargs -r -P 4 "clang-tidy -p \"Arduino/QuantumDice/build\""
+          git ls-files | grep -E '\.(cc|cpp|cxx|ino)$' | grep -v -E 'QuantumDiceInit/|build/|ImageLibrary/' | xargs -r -P 4 "clang-tidy -p Arduino/QuantumDice/build"
