--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -34,4 +34,5 @@ jobs:
           python3 scripts/clean_compile_commands.py QuantumDice/build/compile_commands.json
       - name: Run clang-tidy
         run: |
-          git ls-files | grep -E '\.(cc|cpp|cxx|ino)$' | grep -v -E 'QuantumDiceInit|build/|ImageLibrary/' | xargs -r -P 4 clang-tidy -p QuantumDice/build
+
+          git ls-files | grep -E '\.(cc|cpp|cxx|ino)$' | grep -v -E 'build/|ImageLibrary/' | xargs -r -P 4 clang-tidy -p QuantumDice/build
